Add modal to location

--- a/case/geoproject.html
+++ b/case/geoproject.html
@@ -1,6 +1,6 @@
 <div class="row h-100 m-0">
     <div class="col-2">
-        <div class="display-6 m-2">Pågående</div>
+        <div class="display-6 m-2">Platser</div>
         <h6 id="sthlm" class="m-2">Stockholm</h6>
         <div id="sthlm-list" class="list-group user-select-none d-none"></div>
         <h6 id="gbg" class="m-2">Göteborg</h6>
@@ -12,20 +12,10 @@
             initCaseGeoMap();
         </script>
 </div>
-<div class="modal fade" id="jobModal" tabindex="-1" aria-labelledby="jobModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+<div class="modal fade" id="jobModal" tabindex="-1" aria-labelledby="job-modal-title" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable">
         <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="jobModalLabel"></h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                ...
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+            
         </div>
     </div>
 </div>
