--- a/kundcase.html
+++ b/kundcase.html
@@ -1,10 +1,18 @@
 <div class="container">
     <div class="display-6 mb-3">Kundcase</div>
+    <p class="mb-3">
+        Alla case har en interaktiv demo. Klicka in och testa!
+    </p>
     <div class="row row-cols-3">
         <div class="col">
             <div class="card" hx-get="./case/geoproject.html" hx-trigger="click" hx-target="#main">
+                <img src="./src/img/geolocation_map_preview.jpg" class="card-img-top" alt="geolocation map preview">
                 <div class="card-body">
-                    <h5 class="card-title">Geo location</h5>
+                    <h5 class="card-title">Interaktiv arbetsplatskarta</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">Fullstack webb</h6>
+                    <p class="card-text">
+                        Ett företag som hyr ut material vill ha en interaktiv karta för sin verksamhet.
+                    </p>
                 </div>
             </div>
         </div>
